2008-10-27 Jens Thoms Toerring    <jt@toerring.de>

	* lib/button.c: Bug in function for selecting which
	mouse buttons a button reacts to fixed.

2008-10-20 Jens Thoms Toerring    <jt@toerring.de>

	* lib/forms.c: Added function fl_form_is_iconified()
	that returns if a forms window is in iconfied state.

2008-10-18 Jens Thoms Toerring    <jt@toerring.de>

	* lib/forms.c, lib/tooltip.c: Bug removed that
	led to multiple deletes of tooltip form in the
	fl_finish() function.

2008-09-24 Jens Thoms Toerring    <jt@toerring.de>

	* lib/clock.c: FL_POINT array in draw_hand() was
	one element too short.

2008-09-22 Jens Thoms Toerring    <jt@toerring.de>

	* Further code cleanup
	* Update of man page

2008-09-21 Jens Thoms Toerring    <jt@toerring.de>

	* Bits of code clean-up in several places.

2008-09-17 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c: Added removal of tooltip when
	object gets deleted.

2008-09-16 Jens Thoms Toerring    <jt@toerring.de>

	* lib/win.c, lib/forms.c: Code for showing a form
	was changed. The previous code made the assumption
	that all window managers would reparent the form
	window withing a window with the decorations, but
	this is not necessary the case (e.g. metacity, the
	default window manager of Gnome). This led to
	inconsistencies in the positioning of forms with
	different window managers. Also positioning forms
	with negative values for x and y (to position a
	window with its right or bottom border relative
	to the right or bottom of the screen didn't work
	correctly.

2008-08-04 Jens Thoms Toerring    <jt@toerring.de>

	* lib/goodie_choice.c: Bug in setting the buttons
	texts removed.

2008-08-03 Jens Thoms Toerring    <jt@toerring.de>

	* lib/forms.c, lib/objects.c: Removed bug pointed out
	by J. P. Mellor that allowed selecting and editing
	input objects even when the were deactivated.

	* fdesign/fd_attribs.c: Removed a bug pointed out
	by Werner Heisch that crashed fdesign if the type
	of an object was changed.
